--- a/descss.html
+++ b/descss.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Primeiro Desafio CSS</title>
+
+    <link href="descss.css" rel="stylesheet" />
   </head>
-  <body></body>
+
+  <body>
+    <div id="div1">Div 1</div>
+    <div id="div2">Div 2</div>
+    <div id="div3">Div 3</div>
+  </body>
 </html>
